@@ -193,7 +193,21 @@
         <h2>Syntax</h2>
     <pre class="Syntax"><code>Test-WindowsFeature [-Name] &lt;String&gt; [-WhatIf] [-Confirm] [&lt;CommonParameters&gt;]</code></pre>
     
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>The names of the features are different on different versions of Windows.  You can get a list by running the following commands.</p>
+
+<p>On Windows 2008:</p>
+
+<pre><code>serveramanagercmd.exe -q
+</code></pre>
+
+<p>One Windows 7:</p>
+
+<pre><code>Get-WmiObject -Class Win32_OptionalFeature | Select-Object Name
+</code></pre>
+
+    </div>
     
     
 
@@ -210,7 +224,7 @@
             			<tr valign='top'>
 				<td>Name</td>
 				<td><a href="http://msdn.microsoft.com/en-us/library/system.string.aspx">String</a></td>
-				<td>The
+				<td>The name of the feature to test.  Feature names are case-sensitive and are different between different versions of Windows.  For a list, on Windows 2008, run <code>serveramanagercmd.exe -q</code>; on Windows 7, run <code>Get-WmiObject -Class Win32_OptionalFeature | Select-Object Name</code>.
 </td>
 				<td>true</td>
 				<td>false</td>
@@ -248,6 +262,15 @@
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Test-WindowsFeature -Name MSMQ-Server</code></pre>
+            <p><p>Tests if MSMQ is installed.</p>
+</p><p></p><p></p><p></p><p></p>             <h2>EXAMPLE 2</h2>
+            <pre><code>Test-WindowsFeature -Name IIS-WebServer</code></pre>
+            <p><p>Tests if IIS is installed on Windows 7.</p>
+</p><p></p><p></p><p></p><p></p>             <h2>EXAMPLE 3</h2>
+            <pre><code>Test-WindowsFeature -Name Web-WebServer</code></pre>
+            <p><p>Tests if IIS is installed on Windows Server 2008.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
