@@ -17,6 +17,7 @@
   * [Install-WindowsFeatureIis](http://get-carbon.org/help/Install-WindowsFeatureIis.html)
   * [Install-WindowsFeatureMsmq](http://get-carbon.org/help/Install-WindowsFeatureMsmq.html)
   * [Install-WindowsFeatures](http://get-carbon.org/help/Install-WindowsFeatures.html)
+  * [Test-WindowsFeature](http://get-carbon.org/help/Test-WindowsFeature.html)
 
 # 0.2.5 (29 June 2012)
 
